--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="components/header.js" type="text/javascript" defer></script>
+    <script src="components/footer.js" type="text/javascript"></script>
+    <style>
+        #wrapper {
+            background-color: #000614;
+            color: #FFFFFF;
+        }
+    </style>
 </head>
 <body>
 <div id="wrapper">
     <header-component></header-component>
-    <footer>
-    </footer>
+    <div>
+        <h1>Hello World</h1>
+    </div>
+    <footer-component></footer-component>
 </div>
 </body>
 </html>
