--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
         #wrapper {
             background-color: #000614;
             color: #FFFFFF;
+            min-width: 1000px;
+        }
+        .content {
+            width: 80%;
+            min-width: 1000px;
+            margin: auto;
         }
     </style>
 </head>
 <body>
 <div id="wrapper">
     <header-component></header-component>
-    <div>
+    <div class="content">
         <h1>Hello World</h1>
     </div>
     <footer-component></footer-component>
