--- a/pages/login.html
+++ b/pages/login.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        form {
+            text-align: right;
+            font-size: 120%;
+        }
+    </style>
 </head>
 <body>
     <div>
@@ -16,16 +22,16 @@
                 <td style="width: 400px;">
                     <div>
                         <form action="" >
-                            <label for="name">*Name:</label>
-                            <input type="text" name="name" id="name" placeholder="Enter your name here" size="25px" required> <br>
-                            <label for="phone">*Phone Number:</label>
-                            <input type="text" name="phone" id="phone" placeholder="Enter your phone number here" size="25px" required> <br>
-                            <label for="email">*E-mail:</label>
-                            <input type="email" name="email" id="email" placeholder="Enter your Email-ID here" size="25px" required> <br>
-                            <label for="password">*Password:</label>
-                            <input type="password" name="password" id="password" placeholder="Enter your password here" size="25px" required> <br>
-                            <label for="confirmpassword">*Confirm Password:</label>
-                            <input type="password" name="confirmpassword" id="confirmpassword" placeholder="Enter your confirm password here" size="25px" required> <br>
+                            <label for="name">Name:</label>
+                            <input type="text" name="name" id="name" placeholder="Enter your name here" size="30px" required> <br><br>
+                            <label for="phone">Phone Number:</label>
+                            <input type="text" name="phone" id="phone" placeholder="Enter your phone number here" size="30px" required> <br><br>
+                            <label for="email"></label>E-mail:</label>
+                            <input type="email" name="email" id="email" placeholder="Enter your Email-ID here" size="30px" required> <br><br>
+                            <label for="password">Password:</label>
+                            <input type="password" name="password" id="password" placeholder="Enter your password here" size="30px" required> <br><br>
+                            <label for="confirmpassword">Confirm Password:</label>
+                            <input type="password" name="confirmpassword" id="confirmpassword" placeholder="Enter your confirm password here" size="30px" required> <br><br>
                         </form>
                     </div>
                 </td>
