--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>Title</title>
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="../components/color.css">
     <style>
         #wrapper {
-            background-color: #000614;
+            background-color: #141415;
             color: #FFFFFF;
             min-width: 1000px;
         }
@@ -23,6 +24,21 @@
     <header-component></header-component>
     <div class="content">
         <h1>Hello World</h1>
+        <p>Our main page</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta hic culpa, aperiam eum neque nulla, fugiat similique voluptas ratione mollitia modi deleniti ut corrupti iure quisquam placeat assumenda aliquid quod.</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
     </div>
     <footer-component></footer-component>
 </div>
