--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../components/color.css">
     <style>
         #wrapper {
-            background-color: #141415;
+            background-color: #1a1a1a;
             color: #FFFFFF;
             min-width: 1000px;
         }
