Add poster and dev homepage

--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -106,7 +106,7 @@
 <div id="wrapper">
     <header-component></header-component>
     <div class="content">
-        <p><a href="../index.html" class="other-page-breadcrumb">Home</a> / <strong class="current-page-breadcrumb">Feedback</strong></p>
+        <p><a href="../index.php" class="other-page-breadcrumb">Home</a> / <strong class="current-page-breadcrumb">Feedback</strong></p>
         <div class="feedback-form">
             <p class="feedback-form-headline">Feedback Form</p>
             <hr><br>
